--- a/Front-end/src/app/footer/footer.component.html
+++ b/Front-end/src/app/footer/footer.component.html
@@ -1,27 +1,26 @@
 <div class="footer" >
     <div class="footer-1">
-        <div>Confidence and responsibility</div>
-        <div>Rain Drop</div>
-        <div>Case study</div>
-        <div>Live plans</div>
+        <div>Confiance et responsabilité</div>
+        <div>Goutte de pluie</div>
+        <div>Etude de cas</div>
     </div>
     <div class="footer-2">
-       <div>Training</div>
-       <div>Collaboration</div>
+       <div>Trainings</div>
+       <div>Collaborations</div>
        <div>Support</div>
     </div>
     <div class="footer-3">
-        <div>Job offers</div>
+        <div>Offres d'emploi</div>
         <div>Resources</div>
-        <div>Look for a partner</div>
-        <div>Become a partner</div>
+        <div>Recherche d'un partenaire</div>
+        <div>Devenir un partenaire</div>
     </div>
     <div class="footer-4">
-        <div>Exchanges</div>
-        <div>Events</div>
+        <div>Echanges</div>
+        <div>Evènements</div>
         <div>Blogs</div>
         <div>Podcasts</div>
-        <div>Community</div>
-        <div>Press center</div>
+        <div>Communauté</div>
+        <div>centre de presse</div>
     </div>
   </div>
