--- a/Front-end/src/app/home-page/home-page.component.html
+++ b/Front-end/src/app/home-page/home-page.component.html
@@ -3,12 +3,12 @@
     <div class="content_container">
         <div class="content_welcome">
             <div class="content_description">
-                <div class="description">Tomorrow is another day. <br> To make an impact, It's up to us to change it with confidence and responsibility</div>
+                <div class="description">Demain est un autre jour. <br> Pour avoir un impact, c'est à nous de le changer avec confiance et responsabilité </div>
             </div>
             <div class="content_details">
-                <div><i class="fas fa-check"></i> Utilize ressources to develop yourself and evoluate</div>
-                <div><i class="fas fa-check"></i> Share with confidence to develop your line of business</div>
-                <div><i class="fas fa-check"></i> Dare to innovate</div>
+                <div><i class="fas fa-check"></i> Utilisez les ressources pour développer vos compétences et évoluer</div>
+                <div><i class="fas fa-check"></i> Partagez en toute confiance pour développer votre métier</div>
+                <div><i class="fas fa-check"></i> Osez l'innovation</div>
             </div>
         </div>
     </div>
@@ -17,59 +17,46 @@
     <div class="description_container">
         <div class="desc2">
             <i class="fas fa-tasks"></i>
-            <span>Evolutif application</span>
-            <div>Secured and constantly optimized, our social network is build to meet all our users needs</div>
+            <span>Application Evolutif</span>
+            <div>Sécurisé et constamment optimisé, notre réseau social est construit pour répondre à tous les besoins de nos utilisateurs</div>
         </div>
         <div class="desc2">
             <i class="fas fa-user-tie"></i>
-            <span>Performent solution for busnisses and individuals</span>
-            <div>Explore our services to help grow your business</div>
+            <span>Solution performante pour les entreprises et les particuliers</span>
+            <div>Explorez nos services pour vous aider à développer votre entreprise</div>
         </div>
     </div>
 </div>
 <div class="hub_wrapper">
     <div class="hub_container">
-        <div class="title"><hr>Business Hub<hr></div>
+        <div class="title" style="color: red;"><hr>Business Boost Up<hr></div>
         <div class="hub">
-            <div class="description">Different services to help you develop your line of business securely</div>
+            <div class="description">Différents services pour vous aider à développer votre activité en toute sécurité</div>
             <div class="hub_content">
-                <div><i class="fas fa-cloud-rain"></i> Investment Rain</div>
-                <div><i class="fas fa-water"></i> Suppliers River</div>
-                <div><i class="fas fa-map-marked-alt"></i>Business Maps</div>
-                <div><i class="fas fa-user-friends"></i> Business Peers</div>
-                <div><i class="fas fa-search-dollar"></i> Market Place</div>
-                <div><i class="fas fa-coffee"></i> Collaboration Lake</div>
-                <div><i class="fas fa-tasks"></i> Boost Startup</div>
-                <div><i class="fas fa-briefcase"></i> Find Job</div>
+                <div><i class="fas fa-cloud-rain"></i> Investment Rain Drop</div>
+                <div><i class="fas fa-water"></i> Suppliers river</div>
+                <div><i class="fas fa-map-marked-alt"></i>Business plans</div>
+                <div><i class="fas fa-user-friends"></i> Look for Peers</div>
+                <div><i class="fas fa-search-dollar"></i> MarketPlace</div>
+                <div><i class="fas fa-coffee"></i> Collaboration Lake </div>
+                <div><i class="fas fa-briefcase"></i> Unlock opportunities</div>
             </div>
-            <div class="more">View more services</div>
+            <div class="more">Voir plus de services</div>
         </div>
     </div>
     <div class="hub_container">
-        <div class="title"><hr>Skills Hub<hr></div>
+        <div class="title" style="color: red;"><hr>Skilling up<hr></div>
         <div class="hub">
-            <div class="description">All the resources you will need to develop yourself and evoluate</div>
+            <div class="description">Toutes les ressources dont vous aurez besoin pour développer vos compétences et évoluer</div>
             <div class="hub_content">
                 <div><i class="fas fa-tint"></i>  Skills Rain Drop</div>
                 <div><i class="far fa-file"></i> Verisign Cv-tech Cloud</div>
-                <div><i class="fas fa-book"></i> Library Fountain</div>
-                <div><i class="fas fa-chalkboard-teacher"></i>Formation River</div>
-                <div><i class="fas fa-microphone"></i> Conferences Brook</div>
+                <div><i class="fas fa-book"></i> Fontaine de bibliothèques</div>
+                <div><i class="fas fa-chalkboard-teacher"></i>Training river</div>
+                <div><i class="fas fa-microphone"></i> Conference brook</div>
                 <div><i class="far fa-question-circle"></i> Support</div>
             </div>
-            <div class="more">View more resources</div>
-        </div>
-    </div>
-    <div class="hub_container">
-        <div class="title"><hr>Dare to innovate <hr></div>
-        <div class="hub">
-            <div class="description">Get out from your comfort zone and dare to innovate (in construction)</div>
-
-            <div class="hub_content">
-                <div>Modernization</div>
-                <div>Optimization</div>
-                <div>Technologies</div>
-            </div>
+            <div class="more">Voir plus de services</div>
         </div>
     </div>
 </div>
