--- a/Front-end/src/app/jobs/job-description/job-description.component.html
+++ b/Front-end/src/app/jobs/job-description/job-description.component.html
@@ -2,5 +2,5 @@
     <div class="title">{{jobOffer.post}}</div>
     <div class="enterprise">{{jobOffer.enterprise}}</div>
     <div class="location">{{jobOffer.location}}</div>
-    <div class="time">published : {{jobOffer.creationDate}} </div>
+    <div class="time">publié : {{jobOffer.creationDate}} </div>
 </div>
