--- a/Front-end/src/app/auth/login/login.component.html
+++ b/Front-end/src/app/auth/login/login.component.html
@@ -4,11 +4,11 @@
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" >
         <div class="header">
             <div class="alert alert-danger" *ngIf="isError">
-                <p>Incorrecte username or password. Please try again. </p>
+                <p>Identifiant ou mot de passe incorrect. Veuillez réessayer. </p>
             </div>
         </div>
         <div class="input_section">
-            <div class="label"> <label for="username">Username </label> </div>
+            <div class="label"> <label for="username">Nom d'utilisateur </label> </div>
             <input 
                 type="text" 
                 name="username" 
@@ -18,20 +18,20 @@
                 minlength="4">
         </div>
         <div class="input_section">
-            <div class="label"> <label for="password">Password </label> </div>
+            <div class="label"> <label for="password">Mot de passe </label> </div>
             <input 
                 type="password" 
                 name="password" 
                 id="password"
                 ngModel
                 required
-                minlength="6">
+                minlength="4">
         </div>
         <div class="footer">
             <div class="submit">
                 <button type="submit" [disabled]="!authForm.valid" >Login</button>
             </div>
-            <div class="signup">You don't have an account ? <a routerLink="/sign-up">Sign up from here.</a> </div>
+            <div class="signup">Vous n'avez pas de compte? <a routerLink="/sign-up">Inscrivez-vous ici.</a> </div>
         </div>
         
     </form>
