--- a/Front-end/src/app/auth/signup/signup.component.html
+++ b/Front-end/src/app/auth/signup/signup.component.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="input_section">
-            <div class="label"> <label for="userType">User Type </label> </div>
+            <div class="label"> <label for="userType">Type d'utilisateur</label> </div>
             <mat-radio-group name="userType"  ngModel required style="display: flex; justify-content: space-between; width: 200px; color: black;" >
                 <mat-radio-button *ngFor="let type of types" [value]="type">
                     {{type}}
@@ -97,7 +97,7 @@
                 email>
         </div>
         <div class="input_section">
-            <div class="label"> <label for="username">Username </label> </div>
+            <div class="label"> <label for="username">Nom d'utilisateur </label> </div>
             <input 
                 type="text" 
                 name="username" 
@@ -107,7 +107,7 @@
                 minlength="4">
         </div>
         <div class="input_section">
-            <div class="label"> <label for="password">Password </label> </div>
+            <div class="label"> <label for="password">Mot de passe </label> </div>
             <input 
                 type="password" 
                 name="password" 
@@ -117,7 +117,7 @@
                 minlength="6">
         </div>
         <div class="input_section">
-            <div class="label"> <label for="confirmation">Confirm password </label> </div>
+            <div class="label"> <label for="confirmation">Confirmation </label> </div>
             <input 
                 type="password" 
                 name="confirmation" 
@@ -130,7 +130,7 @@
             <div class="submit">
                 <button type="submit" [disabled]="!signupForm.valid" >Sign up</button>
             </div>
-            <div class="signup">You already have an account ? <a routerLink="/login">Login from here.</a> </div>
+            <div class="signup">Avez vous déjà un compte ? <a routerLink="/login">Connecter-vous ici.</a> </div>
         </div>
         
     </form>
