--- a/Front-end/src/app/connections/connections.component.html
+++ b/Front-end/src/app/connections/connections.component.html
@@ -1,6 +1,6 @@
 <div (click)="showRequests()" [class.new] = "new" class="connections"><i class="fas fa-user-plus"></i><span *ngIf="new">{{count}}</span></div>
 <div *ngIf="show" class="connections_container">
-    <div class="title">Connection requests</div>
+    <div class="title">Demandes de connection</div>
     <div class="requests" >
         <div *ngFor="let request of requests" class="request">
             <div class="img">
