--- a/Front-end/src/app/groups/create-group/create-group.component.html
+++ b/Front-end/src/app/groups/create-group/create-group.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="show">
     <div class="group_wrapper">
         <div class="header">
-            <div>Create a group </div>
+            <div>Créer un groupe </div>
             <div class="exit" (click)="cancel()"><i class="fas fa-times"></i></div>
         </div>
         <form [formGroup]="createGroupForm" (ngSubmit)="createGroup()">
@@ -16,17 +16,17 @@
                 <div class="img_select"></div>
                 <div class="infos">
                     <div class="name">
-                        <label for="name">Groupe name</label><br>
+                        <label for="name">Nom du groupe</label><br>
                         <input [formControlName]="'name'" type="text" id="name">
                     </div>
                     <div class="description">
-                        <label for="desc">Groupe description</label><br>
+                        <label for="desc">Description</label><br>
                         <textarea [formControlName]="'description'" name="desc" id="desc"></textarea>
                     </div>
                 </div>
             </div>
             <div class="footer">
-                <button type="submit">Create</button>
+                <button type="submit">Créer</button>
             </div>
         </form>
         
