--- a/Front-end/src/app/home-page/home-page.component.css
+++ b/Front-end/src/app/home-page/home-page.component.css
@@ -186,6 +186,8 @@
     height: 150px;
     border: 1px solid #cacaca;
     border-radius: 5px;
+    background-color: black;
+    color: white;
 }
 
 .title{
@@ -199,7 +201,7 @@
 
 hr{
     background-color: #5f5f5f;
-    width: 38%;
+    width: 36%;
 }
 
 .hub_content>div{
