--- a/Front-end/src/app/home/home.component.html
+++ b/Front-end/src/app/home/home.component.html
@@ -1,66 +1,61 @@
-
-<div class="img" *ngIf="option == 0">
-    <div class="description"></div>
-    <div class="img_content"></div>
-    <div class="welcome">
-        Welcome to MoroccanOfTheWorld, here you can exchange with moroccans across the world, share your experiences,
-        find new opportunities, and more ...
-    </div>
-</div>
-
-<div class="atlas" *ngIf="option == 1">
-
-</div>
-
-<div class="media" *ngIf="option == 2">
-
-</div>
-
 <div class="content_wrapper">
-    <div class="content_title">
-        What do we offer ?
+    <div class="logos">
+        <div class="logo1">
+
+        </div>
+        <div class="logo2">
+
+        </div>
+    </div>
+    <div class="welcome_wrapper">
+        <div class="welcome">
+            Bienvenue dans votre éspace digitale de skilling up et de mobilisation de compétences. 
+        </div>
     </div>
     <div class="content" >
         <div class="two">
             <div class="hub">
-                <div class="title"><span>Hub Technologies</span></div>
-                <div class="hub-img3"></div>
-                <div>
-                    <ul>
-                        <li><i class="fas fa-caret-right"></i>Innovate</li>
-                        <li><i class="fas fa-caret-right"></i>Optimize</li>
-                        <li><i class="fas fa-caret-right"></i>Modernize</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="hub">
-                <div class="title"><span>Hub Entrepreneurship</span></div>
+                <div class="title"><span>Business Boost Up</span></div>
                 <div class="hub-img2"></div>
                 <div>
                     <ul>
-                        <li><i class="fas fa-caret-right"></i>Invest</li>
-                        <li><i class="fas fa-caret-right"></i>Look for Peers</li>
-                        <li><i class="fas fa-caret-right"></i>Look for a job</li>
-                        <li><i class="fas fa-caret-right"></i>Boost up my start up</li>
-                        <li><i class="fas fa-caret-right"></i>Look for financement</li>
-                        <li><i class="fas fa-caret-right"></i>Look for market</li>
-                        <li><i class="fas fa-caret-right"></i>Find suppliers</li>
+                        <li><i class="fas fa-caret-right"></i>Investment</li>
+                        <li><i class="fas fa-caret-right"></i>Unlock Opportunities</li>
+                        <li><i class="fas fa-caret-right"></i>Start up big lever</li>
+                        <li><i class="fas fa-caret-right"></i>Financement</li>
+                        <li><i class="fas fa-caret-right"></i>Suppliers</li>
                     </ul>
                 </div>
                 
             </div>
+
+            
             <div class="hub">
-                <div class="title"> <span>Hub Skills</span></div>
+                <div class="title"> <span>Skilling up</span></div>
                 <div class="hub-img1"></div>
                 <div>
                     <ul>
-                        <li><i class="fas fa-caret-right"></i>Deposit my CV</li>
-                        <li><i class="fas fa-caret-right"></i>Offer conferences</li>
-                        <li><i class="fas fa-caret-right"></i>Offer mooks cours</li>
-                        <li><i class="fas fa-caret-right"></i>Look for peers</li>
+                        <li><i class="fas fa-caret-right"></i>Digitale Academy</li>
+                        <li><i class="fas fa-caret-right"></i>Professional formations</li>
+                        <li><i class="fas fa-caret-right"></i>In demande formations</li>
+                        <li><i class="fas fa-caret-right"></i>Profiling formations</li>
+                        <li><i class="fas fa-caret-right"></i>Conferences / Workshops</li>
                     </ul>
                 </div>
             </div>
+
+            <div class="hub">
+                <div class="title"><span>Moving up</span></div>
+                <div class="hub-img3"></div>
+                <div>
+                    <ul>
+                        <li><i class="fas fa-caret-right"></i>Continuous innovation</li>
+                        <li><i class="fas fa-caret-right"></i>More values</li>
+                        <li><i class="fas fa-caret-right"></i>New capabilities</li>
+                    </ul>
+                </div>
+            </div>
+            
         </div>
       
       </div>
@@ -74,6 +69,10 @@
       <div class="logo_back l8"></div>
       <div class="logo_back l9"></div>
       <div class="logo_back l10"></div>
+      <div class="logo_back l11"></div>
+      <div class="logo_back l12"></div>
+      <div class="logo_back l13"></div>
+      <div class="logo_back l14"></div>
 </div>
 
 
